tests/paczka1/fuzzy1/33339335.err
Error in line 3: FXhZ95n1lBm A41 54,0
Error in line 11: A91 S4 15,3
Error in line 22: Jz7uX A91 49,8
Error in line 21: PQPfeN A359 13,0
Error in line 29: Jz7uX A359 208,0
Error in line 37: Jz7uX A41 8,2
